--- a/style.css
+++ b/style.css
@@ -1,71 +1,71 @@
 @font-face {
   font-family: "noto sans";
-  src: url("https://raw.githubusercontent.com/notofonts/notofonts.github.io/refs/heads/main/fonts/NotoSans/hinted/ttf/NotoSans-Regular.ttf") local("noto sans");
+  src: url("https://raw.githubusercontent.com/notofonts/notofonts.github.io/refs/heads/main/fonts/NotoSans/hinted/ttf/NotoSans-Regular.ttf");
   font-display: swap;
 }
 @font-face {
   font-family: "noto sans";
-  src: url("https://raw.githubusercontent.com/notofonts/notofonts.github.io/refs/heads/main/fonts/NotoSans/hinted/ttf/NotoSans-Italic.ttf") local("noto sans");
+  src: url("https://raw.githubusercontent.com/notofonts/notofonts.github.io/refs/heads/main/fonts/NotoSans/hinted/ttf/NotoSans-Italic.ttf");
   font-display: swap;
   font-style: italic;
 }
 @font-face {
   font-family: "noto sans";
-  src: url("https://raw.githubusercontent.com/notofonts/notofonts.github.io/refs/heads/main/fonts/NotoSans/hinted/ttf/NotoSans-Bold.ttf") local("noto sans");
+  src: url("https://raw.githubusercontent.com/notofonts/notofonts.github.io/refs/heads/main/fonts/NotoSans/hinted/ttf/NotoSans-Bold.ttf");
   font-display: swap;
   font-weight: 700;
 }
 @font-face {
   font-family: "noto sans";
-  src: url("https://raw.githubusercontent.com/notofonts/notofonts.github.io/refs/heads/main/fonts/NotoSans/hinted/ttf/NotoSans-BoldItalic.ttf") local("noto sans");
+  src: url("https://raw.githubusercontent.com/notofonts/notofonts.github.io/refs/heads/main/fonts/NotoSans/hinted/ttf/NotoSans-BoldItalic.ttf");
   font-display: swap;
   font-weight: 700;
   font-style: italic;
 }
 @font-face {
   font-family: "noto serif";
-  src: url("https://raw.githubusercontent.com/notofonts/notofonts.github.io/refs/heads/main/fonts/NotoSerif/hinted/ttf/NotoSerif-Regular.ttf") local("noto serif");
+  src: url("https://raw.githubusercontent.com/notofonts/notofonts.github.io/refs/heads/main/fonts/NotoSerif/hinted/ttf/NotoSerif-Regular.ttf");
   font-display: swap;
 }
 @font-face {
   font-family: "noto serif";
-  src: url("https://raw.githubusercontent.com/notofonts/notofonts.github.io/refs/heads/main/fonts/NotoSerif/hinted/ttf/NotoSerif-Italic.ttf") local("noto serif");
+  src: url("https://raw.githubusercontent.com/notofonts/notofonts.github.io/refs/heads/main/fonts/NotoSerif/hinted/ttf/NotoSerif-Italic.ttf");
   font-display: swap;
   font-style: italic;
 }
 @font-face {
   font-family: "noto serif";
-  src: url("https://raw.githubusercontent.com/notofonts/notofonts.github.io/refs/heads/main/fonts/NotoSerif/hinted/ttf/NotoSerif-Bold.ttf") local("noto serif");
+  src: url("https://raw.githubusercontent.com/notofonts/notofonts.github.io/refs/heads/main/fonts/NotoSerif/hinted/ttf/NotoSerif-Bold.ttf");
   font-display: swap;
   font-weight: 700;
 }
 @font-face {
   font-family: "noto serif";
-  src: url("https://raw.githubusercontent.com/notofonts/notofonts.github.io/refs/heads/main/fonts/NotoSerif/hinted/ttf/NotoSerif-BoldItalic.ttf") local("noto serif");
+  src: url("https://raw.githubusercontent.com/notofonts/notofonts.github.io/refs/heads/main/fonts/NotoSerif/hinted/ttf/NotoSerif-BoldItalic.ttf");
   font-display: swap;
   font-weight: 700;
   font-style: italic;
 }
 @font-face {
   font-family: "iosevie";
-  src: url("https://raw.githubusercontent.com/mi2ebi/iosevie/refs/heads/main/dist/Iosevie/TTF/Iosevie-Regular.ttf") local("iosevie");
+  src: url("https://raw.githubusercontent.com/mi2ebi/iosevie/refs/heads/main/dist/Iosevie/TTF/Iosevie-Regular.ttf");
   font-display: swap;
 }
 @font-face {
   font-family: "iosevie";
-  src: url("https://raw.githubusercontent.com/mi2ebi/iosevie/refs/heads/main/dist/Iosevie/TTF/Iosevie-Italic.ttf") local("iosevie");
+  src: url("https://raw.githubusercontent.com/mi2ebi/iosevie/refs/heads/main/dist/Iosevie/TTF/Iosevie-Italic.ttf");
   font-display: swap;
   font-style: italic;
 }
 @font-face {
   font-family: "iosevie";
-  src: url("https://raw.githubusercontent.com/mi2ebi/iosevie/refs/heads/main/dist/Iosevie/TTF/Iosevie-Bold.ttf") local("iosevie");
+  src: url("https://raw.githubusercontent.com/mi2ebi/iosevie/refs/heads/main/dist/Iosevie/TTF/Iosevie-Bold.ttf");
   font-display: swap;
   font-weight: 700;
 }
 @font-face {
   font-family: "iosevie";
-  src: url("https://raw.githubusercontent.com/mi2ebi/iosevie/refs/heads/main/dist/Iosevie/TTF/Iosevie-BoldItalic.ttf") local("iosevie");
+  src: url("https://raw.githubusercontent.com/mi2ebi/iosevie/refs/heads/main/dist/Iosevie/TTF/Iosevie-BoldItalic.ttf");
   font-display: swap;
   font-weight: 700;
   font-style: italic;
